== master

== 0.1.2 / 2008-11-29

* Fix empty strings in ActiveRecord 2.2+ returning nil instead of false

== 0.1.1 / 2008-07-06

* Remove dependency on active_support for non-ActiveRecord predicates

== 0.1.0 / 2008-07-03

* Rename to attribute_predicates

== 0.0.5 / 2008-06-19

* Avoid string evaluation for dynamic methods

== 0.0.4 / 2008-05-05

* Support for ActiveRecord 2.1
* Update documentation

== 0.0.3 / 2007-09-18

* Remove gem dependency on activerecord
* Convert dos newlines to unix newlines

== 0.0.2 / 2007-02-02

* Released as a gem

== 0.0.1 / 2007-01-04

* Initial release